# BlofinBandTrader

./: .env  .gitignore  PRD_bot.md  band_based_sl.py  config.py  indicators.py  market_scanner.py  pyproject.toml  risk_manager.py  test_indicators.py  test_risk_manager.py  trading_bot.py  utils.py  websocket_manager.py
reporting/: __init__.py  email_service.py  report_generator.py  report_scheduler.py  trade_tracker.py
tests/: test_email_report.py  test_order.py  test_sl_dynamic.py  test_sl_mock.py  test_trading_bot.py
